syntax = "proto3";

package chat;

message Bundle {
  bytes identity = 1;
  bytes signed_pre_key = 2;
  bytes signature = 3;
}

message BundleContainer {
  Bundle bundle = 1;
  bytes private_signed_pre_key = 2;
}

message DirectMessageProtocol {
  // Which ephemeral key has been used
  oneof ephemeral_key {
    bytes bundle_key = 1;
    bytes dh_key = 2;
    bytes sym_key = 3;
  }
  // The bundle used in case of x3dh
  bytes bundle_id = 4;

  bytes payload = 5;
}

message ProtocolMessage {
  // An optional bundle is exchanged with each message

  Bundle bundle = 1;
  oneof message_type {
    // One to one message encrypted
    DirectMessageProtocol direct_message = 101;
    // Public chats, not encrypted
    bytes public_message = 102;
  }
}


